--- a/app.json
+++ b/app.json
@@ -11,5 +11,6 @@
   "attachmentFolderPath": "assets/material/2022/11",
   "alwaysUpdateLinks": true,
   "strictLineBreaks": true,
-  "newFileLocation": "current"
+  "newFileLocation": "current",
+  "showUnsupportedFiles": false
 }
