Add: plugin excalidraw

--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
   "newLinkFormat": "relative",
   "userIgnoreFilters": null,
   "promptDelete": false,
-  "attachmentFolderPath": "assets/material/2023/11",
+  "attachmentFolderPath": "assets/material/thzt/2024/01",
   "alwaysUpdateLinks": true,
   "strictLineBreaks": true,
   "newFileLocation": "current",
