--- a/app.json
+++ b/app.json
@@ -6,13 +6,13 @@
   "newLinkFormat": "relative",
   "userIgnoreFilters": null,
   "promptDelete": false,
-  "attachmentFolderPath": "assets/material/thzt/2024/01",
+  "attachmentFolderPath": "assets/material/2024/02",
   "alwaysUpdateLinks": true,
   "strictLineBreaks": true,
   "newFileLocation": "current",
   "showUnsupportedFiles": false,
   "pdfExportSettings": {
-    "includeName": false,
+    "includeName": true,
     "pageSize": "A4",
     "landscape": false,
     "margin": "0",
