--- a/appearance.json
+++ b/appearance.json
@@ -2,5 +2,7 @@
   "accentColor": "",
   "theme": "obsidian",
   "cssTheme": "Minimal",
-  "baseFontSize": 16
+  "baseFontSize": 16,
+  "textFontFamily": "Cascadia Code",
+  "interfaceFontFamily": "Microsoft YaHei UI"
 }
