--- a/themes/Minimal/manifest.json
+++ b/themes/Minimal/manifest.json
@@ -1,7 +1,8 @@
 {
 	"name": "Minimal",
-	"version": "6.1.8",
-	"minAppVersion": "0.16.0",
+	"version": "7.6.0",
+	"minAppVersion": "1.6.0",
 	"author": "@kepano",
-	"authorUrl": "https://twitter.com/kepano"
+	"authorUrl": "https://twitter.com/kepano",
+	"fundingUrl": "https://www.buymeacoffee.com/kepano"
 }
